[gd_scene load_steps=35 format=2]

[ext_resource path="res://Assets/2D/Enemy/AnimationSprites/walkingEnemy/walking/SPRITE__wEnemywalking_21.png" type="Texture" id=1]
[ext_resource path="res://Assets/2D/Enemy/AnimationSprites/walkingEnemy/walking/SPRITE__wEnemywalking_17.png" type="Texture" id=2]
[ext_resource path="res://Assets/2D/Enemy/AnimationSprites/walkingEnemy/walking/SPRITE__wEnemywalking_08.png" type="Texture" id=3]
[ext_resource path="res://Assets/2D/Enemy/AnimationSprites/walkingEnemy/walking/SPRITE__wEnemywalking_03.png" type="Texture" id=4]
[ext_resource path="res://Assets/2D/Enemy/AnimationSprites/walkingEnemy/walking/SPRITE__wEnemywalking_23.png" type="Texture" id=5]
[ext_resource path="res://Assets/2D/Enemy/AnimationSprites/walkingEnemy/walking/SPRITE__wEnemywalking_06.png" type="Texture" id=6]
[ext_resource path="res://Assets/2D/Enemy/AnimationSprites/walkingEnemy/walking/SPRITE__wEnemywalking_10.png" type="Texture" id=7]
[ext_resource path="res://Assets/2D/Enemy/AnimationSprites/walkingEnemy/walking/SPRITE__wEnemywalking_24.png" type="Texture" id=8]
[ext_resource path="res://Assets/2D/Enemy/AnimationSprites/walkingEnemy/walking/SPRITE__wEnemywalking_02.png" type="Texture" id=9]
[ext_resource path="res://Assets/2D/Enemy/AnimationSprites/walkingEnemy/walking/SPRITE__wEnemywalking_14.png" type="Texture" id=10]
[ext_resource path="res://Assets/2D/Enemy/AnimationSprites/walkingEnemy/walking/SPRITE__wEnemywalking_11.png" type="Texture" id=11]
[ext_resource path="res://Assets/2D/Enemy/AnimationSprites/walkingEnemy/walking/SPRITE__wEnemywalking_22.png" type="Texture" id=12]
[ext_resource path="res://Assets/2D/Enemy/AnimationSprites/walkingEnemy/walking/SPRITE__wEnemywalking_15.png" type="Texture" id=13]
[ext_resource path="res://Assets/2D/Enemy/AnimationSprites/walkingEnemy/walking/SPRITE__wEnemywalking_01.png" type="Texture" id=14]
[ext_resource path="res://Assets/2D/Enemy/AnimationSprites/walkingEnemy/walking/SPRITE__wEnemywalking_16.png" type="Texture" id=15]
[ext_resource path="res://Assets/2D/Enemy/AnimationSprites/walkingEnemy/walking/SPRITE__wEnemywalking_12.png" type="Texture" id=16]
[ext_resource path="res://Assets/2D/Enemy/AnimationSprites/walkingEnemy/walking/SPRITE__wEnemywalking_19.png" type="Texture" id=17]
[ext_resource path="res://Assets/2D/Enemy/AnimationSprites/walkingEnemy/walking/SPRITE__wEnemywalking_18.png" type="Texture" id=18]
[ext_resource path="res://Assets/2D/Enemy/AnimationSprites/walkingEnemy/walking/SPRITE__wEnemywalking_04.png" type="Texture" id=19]
[ext_resource path="res://Assets/2D/Enemy/AnimationSprites/walkingEnemy/walking/SPRITE__wEnemywalking_20.png" type="Texture" id=20]
[ext_resource path="res://Assets/2D/Enemy/AnimationSprites/walkingEnemy/walking/SPRITE__wEnemywalking_13.png" type="Texture" id=21]
[ext_resource path="res://Assets/2D/Enemy/AnimationSprites/walkingEnemy/walking/SPRITE__wEnemywalking_05.png" type="Texture" id=22]
[ext_resource path="res://Assets/2D/Enemy/AnimationSprites/walkingEnemy/walking/SPRITE__wEnemywalking_00.png" type="Texture" id=23]
[ext_resource path="res://Assets/2D/Enemy/AnimationSprites/walkingEnemy/walking/SPRITE__wEnemywalking_07.png" type="Texture" id=24]
[ext_resource path="res://Assets/2D/Enemy/AnimationSprites/walkingEnemy/walking/SPRITE__wEnemywalking_09.png" type="Texture" id=25]
[ext_resource path="res://scenes/Enemys/EnemyPatrolling.gd" type="Script" id=26]
[ext_resource path="res://Assets/VFX/VFX_asset/VFX_BasicEnemy2.tscn" type="PackedScene" id=27]
[ext_resource path="res://Assets/Sounds/EnemySounds/EnemyDestroyed.ogg" type="AudioStream" id=28]
[ext_resource path="res://Assets/Sounds/EnemySounds/ChangeGravityOfEnemy.ogg" type="AudioStream" id=29]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 1.73, 2 )

[sub_resource type="CapsuleShape" id=2]
radius = 1.5
height = 1.5

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 23 ), ExtResource( 14 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 19 ), ExtResource( 22 ), ExtResource( 6 ), ExtResource( 24 ), ExtResource( 3 ), ExtResource( 25 ), ExtResource( 7 ), ExtResource( 11 ), ExtResource( 16 ), ExtResource( 21 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 2 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 1 ), ExtResource( 12 ), ExtResource( 5 ), ExtResource( 8 ) ],
"loop": true,
"name": "wEnemy_walking",
"speed": 24.0
} ]

[sub_resource type="Animation" id=6]
resource_name = "CorruptedColor"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite3D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.917647, 0.52549, 1, 1 ), Color( 0.286275, 0.0588235, 0.333333, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OmniLight:omni_range")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 5.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("OmniLight:light_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.803922, 0, 0.898039, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("OmniLight:light_energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 16.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "hurt"
length = 0.35
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite3D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.01, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.686275, 0.0196078, 0.0196078, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.35 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "killEnemy"
} ]
}

[node name="EnemyPatrolling" type="KinematicBody"]
collision_layer = 4
collision_mask = 16
axis_lock_motion_z = true
move_lock_z = true
script = ExtResource( 26 )
speed = 1

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 2 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5 )
frames = SubResource( 3 )
animation = "wEnemy_walking"
frame = 23
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/CorruptedColor = SubResource( 6 )
anims/hurt = SubResource( 5 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.8 )
light_color = Color( 0.964706, 0.784314, 0.870588, 1 )
light_energy = 2.5
omni_attenuation = 2.0

[node name="VFX_BasicEnemy2" parent="." instance=ExtResource( 27 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.55 )

[node name="FlipGravity" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 29 )
unit_db = 15.0
bus = "Sound"

[node name="EnemyDestroyed" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 28 )
unit_db = 17.0
bus = "Sound"

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
